# routers/transactions-router.js
@@ -5,11 +5,13 @@ const {
     getTransactionById,
     addNewTransaction,
     deleteTransaction,
+    getTransactionByEnvelopeId,
 } = require('../db/transactions-queries')
 
 transactionsRouter.get('/',getAllTransactions)
 transactionsRouter.get('/:id', getTransactionById)
 transactionsRouter.post('/', addNewTransaction)
 transactionsRouter.delete('/:id', deleteTransaction)
+transactionsRouter.get('/:envelope_id', getTransactionByEnvelopeId)
 
 module.exports = transactionsRouter;
